--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h1 class="text-blue-400 text-8xl">Tailwindcss Works</h1>
-<router-outlet></router-outlet>
+<app-header></app-header>
+<main class="py-10">
+    <router-outlet></router-outlet>
+</main>
